# nx-bazel-app

./: .angular-cli.json  .gitignore  README.md  package-lock.json  package.json
apps/car-list/src/: BUILD.bazel  index.html
apps/car-list/src/app/: app.module.ts
